todomvc-vue: add some components

--- a/todo-mvc/vue/src/template.html
+++ b/todo-mvc/vue/src/template.html
@@ -5,7 +5,7 @@
     <meta name="viewpoint" content="width=device-width,initail-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{%= o.htmlWebpackPlugin.options.title %}</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body class="html-body">
     <div id="root"></div>
